1.13 (released xx.xx.2023)

* Support ZSTANDARD archives with the zstd tool.

1.12 (released 17.1.2016)

* Add winrar to default search path on Windows.
* Improve usage documentation on Windows.
  Closes: GH bug #19


1.11 (released 9.1.2016)

* Fix 7z unpacking when only p7zip with /usr/bin/7zr is installed.
* Support comic book archives: .cb7 for 7z, .cba for ACE, .cbr for RAR,
  .cbt for TAR and .cbz for ZIP archives.


1.10 (released 10.12.2015)

* Added support for VHD (Virtual Hard Disk) archives with 7z.


1.9 (released 07.12.2015)

* Fix ZPAQ archive creation.
  Patch by vitlav
* Fix ZPAQ archive testing.
* Add more search paths for rar libraries.
  Patch by vitlav
  Closes: GH bug #30
* Fix support URL
  Closes: GH bug #28
* Updated PyPI trove classifiers to include Python 3
  Closes: GH bug #25
* Added new option --non-interactive to avoid commandline prompts of
  archive programs.
  Closes: GH bug #16, #24


1.8 (released 19.7.2015)

* Added support for ZPAQ archives.
  Closes: GH bug #14
* Use options for maximum compression when creating archives
  and the archive program has such options.
* Added a new "recompress" command which tries to reduce the
  size of the compressed archive.
* Add BZIP2 creation to 7z and 7za commands.


1.7 (released 27.6.2014)

* Configure the xz program to also extract LZMA files.
* Fixed creation of LZMA files with the Python lzma module.
* Handle *.epub and *.apk files as ZIP files.


1.6 (released 8.6.2014)

* Search /usr/local/lib for p7zip RAR modules.
  Closes: GH bug #10


1.5 (released 30.3.2014)

* Fix detection of existing broken symlinks when unpacking.


1.4 (released 2.9.2013)

* Add missing GZIP creation support for 7z modules.
  Closes: GH bug #6


1.3 (released 19.7.2013)

* Add patoolib.__version__ (see PEP 396).
  Closes: GH bug #3
* Improved detection of LZMA and LRZIP files with file(1).
* Add missing patoolib.programs to Windows installer.
  Closes: GH bug #5


1.2 (released 27.6.2013)
